# one-engine

./: Cargo.toml
assets/shaders/: instanced.wgsl  light.wgsl  sample.wgsl
assets/shaders/shader_lib/: boilerplate.wgsl  camera.wgsl  general.wgsl  object.wgsl
paper/: Cargo.toml
paper/src/: 1engine.rs  camera.rs  camera_uniform_buffer.rs  device_drivers.rs  error.rs  files.rs  gpu.rs  gpu_bindgroups.rs  gpu_geometry.rs  gpu_pipeline.rs  gpu_shaders.rs  gpu_sync_data.rs  gpu_texture.rs  instances.rs  lib.rs  m_camera.rs  m_uniform_buffer.rs  maths.rs  object.rs  render.rs  task_render.rs  tasks.rs  tickrate.rs  translate_surface.rs  user_input.rs  window.rs  z_missing_texture.rs
paper/src/gpu/: camera.rs  camera_uniform.rs  device_drivers.rs  geometry.rs  gpu_data.rs  gpu_pointers.rs  instances.rs  lights.rs  material.rs  materials.rs  mesh.rs  object.rs  pipeline_data.rs  raw_bindgroups.rs  render.rs  shader_pipeline.rs  shaders.rs  texture.rs
paper/src/hardcoded_values/: missing_texture.rs
paper/src/shader_code/: sample.wgsl
paper/src/tasks/: lib.rs  queue_render.rs  task.rs  tasks.rs
paper/src/window/: lib.rs  sdl_handle.rs  tickrate.rs  translate_surface.rs
person/: Cargo.toml
person/src/: main.rs
