[package]
name = "paper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bytemuck = "1.23.1"
cgmath = "0.18.0"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
pollster = "0.4.0"
rand = "0.9.1"
rayon = "1.10.0"
strum = "0.27.2"
strum_macros = "0.27.2"
wgpu = "24.0.5"
winit = "0.30.11"
